change mfcc and stft preprocess

--- a/recrear.ipynb
+++ b/recrear.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,13 +63,18 @@
     "            # exclude a corrupted wav file that makes everything crash.\n",
     "            if os.path.join(dirpath, file) != 'genres_original/jazz/jazz.00054.wav':\n",
     "                song, sr = librosa.load(os.path.join(dirpath, file), duration=29)\n",
+    "                for s in range(NUM_SLICES):\n",
+    "                    start_sample = SAMPLES_PER_SLICE * s\n",
+    "                    end_sample = start_sample + SAMPLES_PER_SLICE\n",
     "\n",
-    "                # Compute MFCC\n",
-    "                mfcc = librosa.feature.mfcc(y=song, sr=sr, n_mfcc=128)\n",
-    "                mfcc = mfcc.T\n",
+    "                    slice_song=song[start_sample:end_sample]\n",
     "\n",
-    "                mydict[\"labels\"].append(i-1)\n",
-    "                mydict[\"mfcc\"].append(mfcc.tolist())\n",
+    "                    # Compute MFCC\n",
+    "                    mfcc = librosa.feature.mfcc(y=slice_song, sr=sr, n_mfcc=128)\n",
+    "                    mfcc = mfcc.T\n",
+    "\n",
+    "                    mydict[\"labels\"].append(i-1)\n",
+    "                    mydict[\"mfcc\"].append(mfcc.tolist())\n",
     "            else:\n",
     "                pass\n",
     "\n",
@@ -93,18 +98,24 @@
     "        \"stft\": [] \n",
     "        }\n",
     "\n",
+    "    # Browse each file, slice it and generate the 128 band mfcc for each slice.\n",
     "    for i, (dirpath,dirname, filenames) in enumerate(os.walk(source_path)):\n",
     "        for file in filenames:\n",
     "            # exclude a corrupted wav file that makes everything crash.\n",
     "            if os.path.join(dirpath, file) != 'genres_original/jazz/jazz.00054.wav':\n",
     "                song, sr = librosa.load(os.path.join(dirpath, file), duration=29)\n",
+    "                for s in range(NUM_SLICES):\n",
+    "                    start_sample = SAMPLES_PER_SLICE * s\n",
+    "                    end_sample = start_sample + SAMPLES_PER_SLICE\n",
     "\n",
-    "                # Compute STFT\n",
-    "                stft = np.abs(librosa.stft(song,n_fft=1536,hop_length=1024))\n",
-    "                stft = stft.T\n",
+    "                    slice_song=song[start_sample:end_sample]\n",
     "\n",
-    "                mydict[\"labels\"].append(i-1)\n",
-    "                mydict[\"stft\"].append(stft.tolist())\n",
+    "                    # Compute STFT\n",
+    "                    stft = np.abs(librosa.stft(slice_song))\n",
+    "                    stft = stft.T\n",
+    "\n",
+    "                    mydict[\"labels\"].append(i-1)\n",
+    "                    mydict[\"stft\"].append(stft.tolist())\n",
     "            else:\n",
     "                pass\n",
     "\n",
