--- a/recrear.ipynb
+++ b/recrear.ipynb
@@ -237,7 +237,7 @@
     "    x1 = tf.keras.layers.BatchNormalization()(x1)\n",
     "\n",
     "    x1 = tf.keras.layers.Conv2D(39, (4, 4), activation='relu', padding='same')(x1)\n",
-    "    x1 = tf.keras.layers.AveragePooling2D((2, 2), padding='same')(x1)\n",
+    "    x1 = tf.keras.layers.MaxPooling2D((2, 2), padding='same')(x1)\n",
     "    x1 = tf.keras.layers.BatchNormalization()(x1)\n",
     "    x1 = tf.keras.layers.Dropout(0.4)(x1)\n",
     "    \n",
@@ -263,7 +263,7 @@
     "    x2 = tf.keras.layers.BatchNormalization()(x2)\n",
     "\n",
     "    x2 = tf.keras.layers.Conv2D(64, (3, 3), activation='relu', padding='same')(x2)\n",
-    "    x2 = tf.keras.layers.AveragePooling2D((2, 2), padding='same')(x2)\n",
+    "    x2 = tf.keras.layers.MaxPooling2D((2, 2), padding='same')(x2)\n",
     "    x2 = tf.keras.layers.BatchNormalization()(x2)\n",
     "    x2 = tf.keras.layers.Dropout(0.4)(x2)\n",
     "    \n",
