--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -684,7 +684,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "music",
+   "display_name": "musica",
    "language": "python",
    "name": "python3"
   },
@@ -698,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
