--- a/Etiquetado.ipynb
+++ b/Etiquetado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +45,15 @@
     "    timestamps_df['EndTimestamp'] = timestamps_df['Timestamp'].shift(-1)\n",
     "    \n",
     "    for i in range(0,80,2):\n",
+    "        timestamps_df.loc[i,\"EndTimestamp\"]=timestamps_df.loc[i,\"Timestamp\"]\n",
+    "\n",
+    "    for i in range(0,80,2):\n",
     "        timestamps_df.loc[i,\"Timestamp\"]=timestamps_df.loc[i,\"Timestamp\"]-30\n",
     "\n",
     "    for i in range(1,79,2):\n",
-    "        timestamps_df.loc[i,\"EndTimestamp\"]=timestamps_df.loc[i+1,\"Timestamp\"]\n",
+    "        timestamps_df.loc[i,\"EndTimestamp\"]=timestamps_df.loc[i,\"Timestamp\"]+2\n",
+    "\n",
+    "    timestamps_df.loc[79,\"EndTimestamp\"]=timestamps_df.loc[79,\"Timestamp\"]+2\n",
     "\n",
     "    #print(timestamps_df)\n",
     "    # Procesar cada segmento de tiempo\n",
@@ -91,24 +96,24 @@
     "\n",
     "# Uso de la función para consolidar datos\n",
     "directory = \"datos_raw\"  # Directorio donde están los archivos\n",
-    "consolidated_data = consolidate_data(directory)\n",
-    "\n",
-    "# Guardar los datos consolidados en un archivo JSON\n",
-    "with open('SynapSound_data.json', 'w') as json_file:\n",
-    "    json.dump(consolidated_data, json_file)"
+    "consolidated_data = consolidate_data(directory)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Guardar los datos consolidados en un archivo JSON\n",
+    "with open('SynapSound_data.json', 'w') as json_file:\n",
+    "    json.dump(consolidated_data, json_file)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "musica",
+   "display_name": "music",
    "language": "python",
    "name": "python3"
   },
@@ -122,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
