--- a/Etiquetado.ipynb
+++ b/Etiquetado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,6 @@
     "        start_index = int(start_time * EEG_SAMPLING_RATE)\n",
     "        end_index = int(end_time * EEG_SAMPLING_RATE)\n",
     "        eeg_chunk = eeg_df.iloc[start_index:end_index].values.tolist()\n",
-    "\n",
     "        if 'no_stimuli' in row['Song']:\n",
     "            chunk_label = 'no_stimuli'\n",
     "        else:\n",
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "music",
+   "display_name": "Clasificacion-Musica",
    "language": "python",
    "name": "python3"
   },
@@ -127,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
